--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
   }
