--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=zembrani
-DB_PORT=
+DB_HOST=fwebdev.xyz
+DB_USER=candra
+DB_PASS=candra1234#
+DB_NAME=candra_zembrani
+DB_PORT=1234
 VERIF_SECRET_KEY='2759845E314897B96BA512A8452C4'
 FORGOT_PASSWORD_SECRET_KEY='E8E441AAB824E2777629BEB36F2A6'
 ACCESS_TOKEN_SECRET_KEY='79E5381D65D54CCE6F76E211A9E8B'
