--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "express-zembrani",
   "version": "1.0.0",
   "description": "vehicle rental app ",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -24,7 +23,6 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
@@ -34,5 +32,10 @@
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
