update env copy

--- a/.env copy
+++ b/.env copy
@@ -1,16 +1,16 @@
-DB_HOST=fwebdev.xyz
-DB_USER=candra
-DB_PASS=candra1234#
-DB_NAME=candra_zembrani
-DB_PORT=1234
-VERIF_SECRET_KEY='2759845E314897B96BA512A8452C4'
-FORGOT_PASSWORD_SECRET_KEY='E8E441AAB824E2777629BEB36F2A6'
-ACCESS_TOKEN_SECRET_KEY='79E5381D65D54CCE6F76E211A9E8B'
-PORT=4646
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
+DB_PORT=
+VERIF_SECRET_KEY=
+FORGOT_PASSWORD_SECRET_KEY=
+ACCESS_TOKEN_SECRET_KEY=
+PORT=
 
-FRONT_END_SERVER_URL='http://localhost:3000'
+FRONT_END_SERVER_URL=
 
 #nodemailer
 EMAIL_USER="ZEMBRANI | PROJECT"
-NODEMAILER_AUTH_USER ="aryayol6@gmail.com"
-NODEMAILER_AUTH_PASS ="ydrcoyksbcnrxnhl"
+NODEMAILER_AUTH_USER =
+NODEMAILER_AUTH_PASS =
